# elza-cli

./: .gitignore  Cargo.toml  Makefile.toml
common/: .gitignore  package.json
common-react-js/src/: index.jsx
common-react-js/src/router/: index.jsx  routes.jsx
common-react-js/src/utils/: request.js  requestWithCancel.js
common-react-ts/src/router/: index.tsx  routes.tsx
common-react-ts/src/utils/: request.ts  requestWithCancel.ts
common/public/: index.html
npm/@elza-cli/darwin-arm64/: package.json
npm/@elza-cli/linux-x64/: package.json
npm/@elza-cli/win32-x64/: package.json
npm/elza-cli/: install.js  logger.js  package.json
react-template/: babel.config.json  package.json
react-template-ts/: babel.config.json  package.json
react-template-ts/plugins/: auto-css-module.js
react-template-ts/scripts/: webpack.common.ts  webpack.prod.ts
react-template-ts/src/: index.tsx  typing.d.ts
react-template/scripts/: webpack.common.js  webpack.dev.js
react-template/src/: index.jsx
react/elza/template-js/: elza.config.js
react/elza/template-ts/: elza.config.ts  tsconfig.json
react/farm/: farm.config.ts  index.html
react/farm/src/: index.tsx
react/rspack/template-js/: rsbuild.config.mjs
react/webpack/template-js/: .swcrc  (+1 more)
scripts/: logger.js  publish-npm-packages.js  update-version.js
src/: main.rs
src/core/: build.rs  cli.rs  comprehensive.rs  css.rs  frame.rs  lang.rs  mod.rs  pack.rs  package_json.rs  project.rs  select.rs  select_from_list.rs  state.rs  ui.rs  update_pkg.rs
src/utils/: check.rs  error.rs  logger.rs  mod.rs  utils.rs
(+32 files in other folders)
