[package]
name = "elza-cli"
version = "0.1.0"
edition = "2021"
description = "rust cli for elza"
authors = ["limy <865713897@qq.com>"]
keywords = ["cli", "rust", "frontend"]

categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming",
  "config",
]

default-run = "elza-cli"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "derive", "wrap_help"] }
console = "0.15.8"
dialoguer = "0.11.0"
rust-embed = "8.4.0"
serde_json = "1.0.117"
update-informer = "1.1.0"

[[bin]]
name = "elza-cli"
path = "src/main.rs"
